# vol-surface-mm

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
results/: README.md  final_report.json  final_report.txt  param_sweep.csv  param_sweep_grouped.csv  param_sweep_part_k005.csv  param_sweep_part_k010.csv  param_sweep_part_k015.csv  param_sweep_stdout.txt  surface_snapshot.csv
results/smoke_param_sweep/: param_sweep_grouped.csv  param_sweep_part_k005.csv  param_sweep_stdout.txt
src/vol_surface_mm/: __init__.py  cli.py  config.py
src/vol_surface_mm/core/: __init__.py  hedging.py  pricing.py  quoting.py  stress.py  surface.py
src/vol_surface_mm/data/: __init__.py  feed.py  options_chain.py
src/vol_surface_mm/diagnostics/: __init__.py  display.py  metrics.py
src/vol_surface_mm/scripts/: __init__.py  artifact_common.py  generate_artifacts.py  param_sweep.py  plot_sweep.py
tests/: test_cli.py  test_pricing.py  test_runtime.py  test_strategy.py  test_surface.py
